# ardrone-UFBA

./: .gitignore  README.md
pj_drone_ws/: .gitignore
pj_drone_ws/diversos/: Links.txt  comandos_rapidos.md  link_tutorial_rodar_app.txt  problemas.txt
pj_drone_ws/diversos/imagens_teste/: pistaTesteArquivoGIMP.xcf  pistaTesteArquivoGIMPVertical.xcf
pj_drone_ws/src/ardrone_autopilot-go/launch/: autopilot.launch  enviroment.launch
pj_drone_ws/src/ardrone_autopilot-go/nodes/: .controller.py.swp  interface.py
pj_drone_ws/src/ardrone_controller/: CMakeLists.txt  package.xml
pj_drone_ws/src/ardrone_controller/include/ardrone_controller/: pid.hpp
pj_drone_ws/src/ardrone_controller/src/: controller.cpp  controller2.cpp  pid.cpp  planner.cpp
pj_drone_ws/src/drone_custom/: CMakeLists.txt  package.xml
pj_drone_ws/src/drone_custom/launch/: controle_drone_teclado.launch  controle_drone_teclado_com_tags.launch  controle_drone_teclado_outdoor.launch  controle_teste.launch  lasid.launch  realSim.launch
pj_drone_ws/src/drone_custom/msg/: DadosVisao.msg
pj_drone_ws/src/drone_custom/scripts/: no_control_visao_camera_baixo.py  no_control_visao_camera_frontal.py
pj_drone_ws/src/drone_custom/scripts/controle/: controle_drone.py  controle_drone_joystick.py  controle_drone_teclado.py  controle_drone_video.py  controle_drone_visao.py  controle_status_drone.py
pj_drone_ws/src/drone_custom/scripts/testes/: 2visao-partial.py  Drone.py  Untitled-1.py  decolar.py  pousar.py  testeDrone.py  testeHachet.py
pj_drone_ws/src/tum_simulator/cvg_sim_gazebo/worlds/: ufba2.world  (+3 more)
(+1 files in other folders)
